src/rust/parser/src/emit/snapshots/starlightr_parser__emit__mdx__tests__can_order_sections@datasets-penguins.Rd.snap
---
source: parser/src/emit/mdx.rs
expression: "emit_document(document, &opts, source).unwrap()"
input_file: parser/test_data/datasets-penguins.Rd
---
---
title: "Measurements of Penguins near Palmer Station, Antarctica"
description: "Data on adult penguins covering three species found on three islands in the Palmer Archipelago, Antarctica, including their size (flipper length, body mass, bil"
sidebar:
  label: "penguins"
pagefind: false
---

## Description

Data on adult penguins covering three species found on three islands in the 
  Palmer Archipelago, Antarctica, including their size 
  (flipper length, body mass, bill dimensions), and sex.

  The columns of `penguins` are a subset of the more extensive
  `penguins_raw` data frame, which includes nesting observations 
  and blood isotope data. There are differences in the column names 
  and data types. See the 'Format' section for details.








## Usage

```r
penguins
penguins_raw
```

## Format

`penguins` is a data frame with 344 rows and 8 variables:
  - **`species`**: [`factor`](../factor/), with levels `Adelie`, `Chinstrap`, and `Gentoo`
- **`island`**: `factor`, with levels `Biscoe`, `Dream`, and `Torgersen`
- **`bill_len`**: [`numeric`](../numeric/), bill length (millimeters)
- **`bill_dep`**: `numeric`, bill depth (millimeters)
- **`flipper_len`**: [`integer`](../integer/), flipper length (millimeters)
- **`body_mass`**: `integer`, body mass (grams)
- **`sex`**: `factor`, with levels `female` and `male`
- **`year`**: `integer`, study year: 2007, 2008, or 2009


  `penguins_raw` is a data frame with 344 rows and 17 variables. 
  8 columns correspond to columns in `penguins`, 
  though with different variable names and/or classes:
  - **`Species`**: `character`
- **`Island`**: `character`
- **`Culmen Length (mm)`**: `numeric`, bill length
- **`Culmen Depth (mm)`**: `numeric`, bill depth
- **`Flipper Length (mm)`**: `numeric`, flipper length
- **`Body Mass (g)`**: `numeric`, body mass
- **`Sex`**: `character`
- **`Date Egg`**: [`Date`](../date/), when study nest observed with 1 egg. The year component is the `year` column in `penguins`


  There are 9 further columns in `penguins_raw`:
  - **`studyName`**: `character`, expedition during which the data was collected
- **`Sample Number`**: `numeric`, continuous numbering sequence for each sample
- **`Region`**: `character`, the region of Palmer LTER sampling grid
- **`Stage`**: `character`, denoting reproductive stage at sampling
- **`Individual ID`**: `character`, unique ID for each individual in dataset
- **`Clutch Completion`**: `character`, if the study nest was observed with a full clutch, i.e., 2 eggs
- **`Delta 15 N (o/oo)`**: `numeric`, the ratio of stable isotopes 15N:14N
- **`Delta 13 C (o/oo)`**: `numeric`, the ratio of stable isotopes 13C:12C
- **`Comments`**: `character`, additional relevant information



## Details

used the data to study sex dimorphism separately for the three species.

   popularized the data as
  an illustration for different statistical methods, as an alternative
  to the [`iris`](../iris/) data.

   provide the scripts used to
  create these data sets from the original source data, and a notebook
  reproducing results from .


## Note

These data sets are also available in the  package.  
  See the [package website](https://allisonhorst.github.io/palmerpenguins/) 
  for further details and resources.

  The `penguins` data has some shorter variable names than the `palmerpenguins` version, 
  for compact code and data display.


## References




## Examples

```r
## view summaries
summary(penguins)
summary(penguins_raw)  # categorical variables are (still) character vectors
## summarize character vectors as factors:
summary(penguins_raw, character.method = "factor")

## visualise distribution across factors
plot(island ~ species, data = penguins)
plot(sex ~ interaction(island, species, sep = ""), data = penguins)

## bill depth vs. length by species (color) and sex (symbol):
## positive correlations for all species, males tend to have bigger bills
sym <- c(1, 16)
pal <- c("darkorange","purple","cyan4")
plot(bill_dep ~ bill_len, data = penguins, pch = sym[sex], col = pal[species])

## simplified sex dimorphism analysis for Adelie species:
## proportion of males increases with several size measurements
adelie <- subset(penguins, species == "Adelie")
plot(sex ~ bill_len, data = adelie)
plot(sex ~ bill_dep, data = adelie)
plot(sex ~ body_mass, data = adelie)
m <- glm(sex ~ bill_len + bill_dep + body_mass, data = adelie, family = binomial)
summary(m)

## Produce the long variable names as from {palmerpenguins} pkg:
long_nms <- sub("len", "length_mm",
                sub("dep","depth_mm",
                    sub("mass", "mass_g", colnames(penguins))))
## compare long and short names:
noquote(rbind(long_nms, nms = colnames(penguins)))

# Not run:
 # << keeping shorter 'penguins' names in this example:
    colnames(penguins) <- long_nms
```
