src/rust/parser/src/emit/snapshots/starlightr_parser__emit__mdx__tests__can_order_sections@dplyr-storms.Rd.snap
---
source: parser/src/emit/mdx.rs
expression: "emit_document(document, &opts, source).unwrap()"
input_file: parser/test_data/dplyr-storms.Rd
---
---
title: "Storm tracks data"
description: "This dataset is the NOAA Atlantic hurricane database best track data. The data includes the positions and attributes of storms from 1975-2024. Storms from 1979 "
pagefind: false
---


## Description

This dataset is the NOAA Atlantic hurricane database best track data,
[https://www.nhc.noaa.gov/data/#hurdat](https://www.nhc.noaa.gov/data/#hurdat). The data includes the positions and
attributes of storms from 1975-2024. Storms
from 1979 onward are measured every six hours during the lifetime of the
storm. Storms in earlier years have some missing data.








## Format

A tibble with 20,778 observations
and 13 variables:
- **name**: Storm Name
- **year,month,day**: Date of report
- **hour**: Hour of report (in UTC)
- **lat,long**: Location of storm center
- **status**: Storm classification (Tropical Depression, Tropical Storm, or Hurricane)
- **category**: Saffir-Simpson hurricane category calculated from wind speed. - `NA`: Not a hurricane - 1: 64+ knots - 2: 83+ knots - 3: 96+ knots - 4: 113+ knots - 5: 137+ knots
- **wind**: storm's maximum sustained wind speed (in knots)
- **pressure**: Air pressure at the storm's center (in millibars)
- **tropicalstorm_force_diameter**: Diameter (in nautical miles) of the area experiencing tropical storm strength winds (34 knots or above). Only available starting in 2004.
- **hurricane_force_diameter**: Diameter (in nautical miles) of the area experiencing hurricane strength winds (64 knots or above). Only available starting in 2004.


## Usage

```r
storms
```


## Examples

```r
storms

# Show a few recent storm paths
if (requireNamespace("ggplot2", quietly = TRUE)) {
  library(ggplot2)
  storms |>
    filter(year >= 2000) |>
    ggplot(aes(long, lat, color = paste(year, name))) +
    geom_path(show.legend = FALSE) +
    facet_wrap(~year)
}

storms
```

## See Also

The script to create the storms data set:
[https://github.com/tidyverse/dplyr/blob/main/data-raw/storms.R](https://github.com/tidyverse/dplyr/blob/main/data-raw/storms.R)
